test/integration/statsFormatter/statsCasesFixture/sass-loader-syntax-error/errors.webpack-4.txt
Error in ./main.scss

  Module build failed (from Cdir/node_modules/sass-loader/lib/loader.js):
  
    color: red;
              ^
        Invalid CSS after "  color: red;": expected "}", was ""
        in Xdir/sass-loader-syntax-error/main.scss (line 2, column 14)